[tool.poetry]
name = "domprayer"
version = "0.1.0"
description = "A generic DOM-based password spraying tool"
authors = ["Mayk <7395296+yok4i@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8 || ^3.9"
webdriver-manager = "^3.5.4"
selenium = "^4.1.3"
requests = "^2.27.1"
random-user-agent = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
